Fri Oct 25 10:10:07 GMT  Jim Segrave <jes@jes-2.demon.nl>

	* rollout.c - cast to keep compiler happy
	
Thu Oct 24 22:52:23 2003 GMT  Jim Segrave <jes@jes-2.demon.nl>

	* set.c backgammon.h rollout.c gnubg.c - added text mode commands
	  set rollout log on/off, set rollout logfile <template name>
	  When rollout log is set to on and rollout logfile has a valid
	  path and template, then each rollout will generate a .sgf file
	  of the game. The .sgf file name will use the template, followed
	  by '-'nnnnn'-'x.sgf  where nnnnn is the trial number (starts at
	  0) and x is a etter a-z to indicate which option is being done -
	  the top line in the rollout window is 'a', next 'b', etc/
	
Sat Oct 18 13:46:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkboard.h, play.c, sgf.c: Tidy 3d dice shake code

Sat Oct 18 11:19:06 2003  Joern Thyssen  <jth@gnubg.org>

	* formatgs.c (formatGS): use fOutputDigits and fix typo in 
	calculation of confidence interval.
	(in part reported by Zorba)
	* analysis.c, html.c: always show overall statistics.

Fri Oct 17 16:31:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkprefs.c: Make 3d dice look smoother

Thu Oct 16 19:22:58 2003  Joern Thyssen  <jth@gnubg.org>

	* rollout.c (RolloutGeneral): do not call SanityCheck. The gwcs returned
	by BasicCubefulRollout should be sanitised already. Besides, either
	anBoardOrig or aarMu[alt] should be inverted if fInvert.
	(bug reported by Robert Eberlein)	

Thu Oct 16 11:49:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* renderprefs.c: Fix for 3d dice opacity settings
	* sgf.c: Make sure dice don't roll when match loaded

Tue Oct 14  18:43:10 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>

	* drawboard.c - FormatPoint assumed bar and off would always be
	  three characters, Icelandic UTF-8 did not agree

Tue Oct 14 10:58:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* drawboard3d.c, misc3d.c, gtkprefs.c, renderpref.c: Added