@@ -1,5 +1,10 @@
 Fri Oct 25 10:10:07 GMT  Jim Segrave <jes@jes-2.demon.nl>
 
+	* rollout.c - correct stupid mistake causing board setup in sgf
+          file to be reversed
+
+Fri Oct 25 10:10:07 GMT  Jim Segrave <jes@jes-2.demon.nl>
+
 	* rollout.c - cast to keep compiler happy
 	
 Thu Oct 24 22:52:23 2003 GMT  Jim Segrave <jes@jes-2.demon.nl>
